# llm-prompt-injection-defense

./: .flake8  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: attack_success_rate.py
examples/: rag_defender_demo.py  secure_pipeline_demo.py
patterns/: __init__.py  canary_tokens.py  input_sanitizer.py  output_validator.py  prompt_firewall.py
tests/: __init__.py  test_canary_tokens.py  test_input_sanitizer.py  test_output_validator.py  test_prompt_firewall.py
